<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raivis.develops.lpd_personigais_budzeta_planotais.IncomeAddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nosaukums"
        android:id="@+id/incomeNameTextView"
        android:layout_marginTop="2dp"
        android:textSize="17sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/incomeNameInput"
        android:layout_below="@+id/incomeNameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apjoms"
        android:id="@+id/incomeCapacityTextView"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/incomeNameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="17sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/incomeCapacityInput"
        android:layout_below="@+id/incomeCapacityTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datums"
        android:id="@+id/incomeDateTextView"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/incomeCapacityInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="17sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/incomeDateInput"
        android:layout_below="@+id/incomeDateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avots"
        android:id="@+id/incomeSourceTextView"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/incomeDateInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="17sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/incomeSourceInput"
        android:layout_below="@+id/incomeSourceTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:text="@string/pievienot"
        android:id="@+id/confirmButtonRegister"
        android:theme="@style/AppTheme.Button"
        android:background="#8bc343"
        android:layout_below="@+id/incomeSourceInput"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
