<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raivis.develops.lpd_personigais_budzeta_planotais.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_rds"
        android:id="@+id/nameTextView"
        android:layout_marginTop="2dp"
        android:textSize="17sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameInput"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uzv_rds"
        android:id="@+id/surnameTextView"
        android:layout_marginTop="27dp"
        android:textSize="17sp"
        android:layout_below="@+id/nameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/surnameInput"
        android:layout_below="@+id/surnameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dz_diena"
        android:id="@+id/birthDateTextView"
        android:textSize="17sp"
        android:layout_below="@+id/surnameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <!--TODO date nepieciešams specifisks formāts-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/birthDateInput"
        android:layout_below="@+id/birthDateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/surnameInput"
        android:layout_alignEnd="@+id/surnameInput"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_pasts"
        android:id="@+id/emailTextView"
        android:textSize="17sp"
        android:layout_below="@+id/birthDateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailInput"
        android:layout_below="@+id/birthDateInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_alignRight="@+id/birthDateInput"
        android:layout_alignEnd="@+id/birthDateInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parole"
        android:id="@+id/passwordTextView"
        android:textSize="17sp"
        android:layout_below="@+id/emailInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_below="@+id/passwordTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/birthDateInput"
        android:layout_alignEnd="@+id/birthDateInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:text="@string/apstiprin_t"
        android:id="@+id/confirmButtonRegister"
        android:theme="@style/AppTheme.Button"
        android:background="#8bc343"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="pressOnConfirmRegistration"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageButton"
        android:background="@mipmap/date_picker"
        android:layout_alignTop="@+id/birthDateTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="pressOnDatePicker"/>
</RelativeLayout>
