<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raivis.develops.lpd_personigais_budzeta_planotais.ViewMoneyFlowActivity">

    <Spinner
        android:id="@+id/displayOptionsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moneyFlowListView"
        android:layout_below="@+id/displayOptionsSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/displayOptionsSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layoutXML"
        android:shrinkColumns="true"
        android:stretchColumns="true"
        android:divider="@color/colorOrange"
        android:showDividers="middle">
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <TextView
            android:id="@+id/tvName"
            android:padding="5dp"
            android:text="@string/nosaukums"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/tvAmount"
            android:padding="5dp"
            android:text="@string/apjoms"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@+id/tvDate"
            android:padding="5dp"
            android:text="@string/datums"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
